wersja 0.3.2 -> Kolejny fix. Refactor, poprawa logiki.